[package]
name = "ethers-providers"
license = "MIT OR Apache-2.0"
version = "0.1.3"
authors = ["Georgios Konstantopoulos <me@gakonst.com>"]
edition = "2018"
description = "Provider implementations for the ethers-rs crate"
homepage = "https://docs.rs/ethers"
repository = "https://github.com/gakonst/ethers-rs"
keywords = ["ethereum", "web3", "celo", "ethers"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
ethers-core = { version = "0.1.3", path = "../ethers-core" }
reqwest = { version = "0.10.4", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.110", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.53", default-features = false }
thiserror = { version = "1.0.15", default-features = false }
url = { version = "2.1.1", default-features = false }

# ws support async-std and tokio runtimes for the convenience methods
async-std = { version = "1.6.2", default-features = false, optional = true }

# needed for tls
async-tls = { version = "0.7.0", optional = true }

[dev-dependencies]
ethers = { version = "0.1.3", path = "../ethers" }

rustc-hex = "2.1.0"
async-std = { version = "1.6.2", default-features = false, features = ["attributes"] }

[features]
# slightly opinionated, but for convenience we default to tokio-tls
# to allow websockets w/ TLS support
celo = ["ethers-core/celo"]

async-std-runtime = [
    "async-std",
    "async-tls"
]
